<resources>
    <string name="app_name">PizzaApp</string>

    <string name="title">Day\'s Pizza</string>
    <string name="settings">Settings</string>
    <string name="startorder">Start Order</string>
    <string name="orderhistory">Order History</string>

    <string name="languageFrench">French</string>
    <string name="languageEnglish">English</string>

    <string name="size">Size</string>
    <string name="sizeSmall">Small</string>
    <string name="sizeMedium">Medium</string>
    <string name="sizeLarge">Large</string>

    <string name="toppings">Toppings</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="sausage">Sausage</string>
    <string name="mushroom">Mushroom</string>
    <string name="pepper">Peppers</string>

    <string name="addTopping">+1</string>
    <string name="removeTopping">-1</string>
    <string name="noToppings">0</string>

    <string name="pizzaToppings">Pizza Toppings</string>
    <string name="customerDetails">Customer Details</string>
    <string name="customerName">Name…</string>
    <string name="finishOrder">Complete Order</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>

</resources>